Full sync
Completada la logica de sincronización
Resuelto un error en el primer inicio.
Corrección en el flujo de autenticación para simplificarlo.
Corrección en el importador para evitar canciones "Error"