@@ -19,6 +19,10 @@ android {
     configurations.all {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+        //jvmArgs '-XX:MaxPermSize=256m'
+    }
 }
 
 dependencies {
@@ -33,6 +37,7 @@ dependencies {
     compile 'com.android.support:support-v4:26.1.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
     testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.9.5"
 //    compile 'com.google.android.gms:play-services-drive:11.6.0'
     compile 'com.google.android.gms:play-services-auth:11.6.0'
     compile 'pub.devrel:easypermissions:0.3.0'
